--- a/package.json
+++ b/package.json
@@ -7,15 +7,12 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.13.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "docxtemplater": "^3.67.1",
-    "docxtemplater-image-module-free": "^1.1.1",
-    "express": "^4.21.2",
-    "pdf-lib": "^1.17.1",
-    "pizzip": "^3.2.0",
-    "puppeteer": "^24.29.1",
-    "mongoose": "^8.8.0",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.6.0",
+    "pdf-lib": "^1.17.1"
   }
 }
